--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,23 @@
-steps:
-  - uses: actions/checkout@v4
+name: Upload to AWS S3
 
-  - uses: aws-actions/configure-aws-credentials@v4
-    with:
-      aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      aws-region: us-west-2
+on:
+  push:
+    branches: [ master ] # মেইন ব্রাঞ্চে পুশ হলে ট্রিগার হবে
 
-  - run: aws s3 sync ./ s3://${{ secrets.AWS_S3_BUCKET }}/ --delete
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Upload files to S3
+        run: |
+          aws s3 sync ./ s3://${{ secrets.AWS_S3_BUCKET }}/ --delete
+          # --delete অপশন S3-তে এক্সট্রা ফাইল ডিলিট করবে
