--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Upload to AWS S3
 
 on:
   push:
-    branches: [ master ] 
+    branches: [ master ]
 
 jobs:
   deploy:
@@ -15,8 +15,15 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-north-1
-      - name: Upload files to S3
+          aws-region: ${{ secrets.AWS_REGION }}
+          # Optional: Skip AWS account ID check (if IAM permissions are restricted)
+          mask-aws-account-id: false
+
+
+      - name: Verify AWS Credentials
+        run: aws sts get-caller-identity
+
+      - name: Upload to S3
         run: |
           aws s3 sync ./ s3://${{ secrets.AWS_S3_BUCKET }}/ --delete
-          # --delete অপশন S3-তে এক্সট্রা ফাইল ডিলিট করবে
+          echo "Success! Files uploaded to S3."
