--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Upload to AWS S3
+name: Deploy to S3
 
 on:
   push:
@@ -8,22 +8,14 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-
+      - uses: actions/checkout@v3
+      
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-north-1
-          # Optional: Skip AWS account ID check (if IAM permissions are restricted)
-          mask-aws-account-id: false
-
-
-      - name: Verify AWS Credentials
-        run: aws sts get-caller-identity
-
-      - name: Upload to S3
-        run: |
-          aws s3 sync ./ s3://${{ secrets.AWS_S3_BUCKET }}/ --delete
-          echo "Success! Files uploaded to S3."
+      
+      - name: Sync files to S3
+        run: aws s3 sync ./ s3://alamgir/ --delete
